# Defect-GNN-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  ETL_PIPELINE_PLAN.md  Makefile  PROJECT_ROADMAP.md  README.md  defect_gnn_project_roadmap.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.reference_code/Defect_GNN/: Betti_number.py  GNN.py  dataset_PCA.py  utilities.py
data/raw/: data.csv
include/crystal/: structure.hpp
include/graph/: crystal_graph.hpp  edge_features.hpp  neighbor_list.hpp
include/io/: csv_parser.hpp  json_parser.hpp  vasp_parser.hpp
include/topology/: betti_features.hpp  pca.hpp  ripser_wrapper.hpp
include/utils/: logging.hpp  math.hpp
include/viz/: wasm_api.hpp
src/: main.cpp
src/crystal/: structure.cpp
src/graph/: crystal_graph.cpp  edge_features.cpp  neighbor_list.cpp
src/io/: csv_parser.cpp  json_parser.cpp  vasp_parser.cpp
src/preprocess/: preprocess_betti.cpp
src/topology/: betti_features.cpp  pca.cpp  ripser_wrapper.cpp
src/viz/: wasm_bindings.cpp
web/: .eslintrc.json  next.config.js  package.json
web/.next/: app-build-manifest.json  prerender-manifest.json  trace
web/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
web/.next/cache/webpack/client-development/: index.pack.gz.old
web/.next/cache/webpack/server-development/: index.pack.gz.old
web/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
web/.next/server/app/visualizer/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @swc.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js
web/.next/static/chunks/app/: layout.js  page.js
web/.next/static/chunks/app/_not-found/: page.js
web/.next/static/chunks/app/visualizer/: page.js
web/.next/static/css/app/: layout.css
web/.next/static/webpack/: 921f41f073ad6aa9.webpack.hot-update.json  cca20829bcb845b1.webpack.hot-update.json  webpack.03ca56af0cc3ceb5.hot-update.js  webpack.1b31af136241aca5.hot-update.js  webpack.8d9d266618f2e62e.hot-update.js  webpack.921f41f073ad6aa9.hot-update.js  webpack.9a3af44bbb98008f.hot-update.js  webpack.ae0bd99d901d7047.hot-update.js  webpack.cca20829bcb845b1.hot-update.js  webpack.e5ba73d0579d55b0.hot-update.js  webpack.f717ac39f26316e9.hot-update.js  webpack.ff886b771083cd24.hot-update.js
web/.next/static/webpack/app/: layout.03ca56af0cc3ceb5.hot-update.js  layout.1b31af136241aca5.hot-update.js  layout.8d9d266618f2e62e.hot-update.js  layout.921f41f073ad6aa9.hot-update.js  layout.9a3af44bbb98008f.hot-update.js  layout.ae0bd99d901d7047.hot-update.js  layout.cca20829bcb845b1.hot-update.js  layout.e5ba73d0579d55b0.hot-update.js  layout.ff886b771083cd24.hot-update.js
web/.next/static/webpack/app/visualizer/: page.8d9d266618f2e62e.hot-update.js  page.921f41f073ad6aa9.hot-update.js  page.9a3af44bbb98008f.hot-update.js  page.ae0bd99d901d7047.hot-update.js  page.cca20829bcb845b1.hot-update.js  page.e5ba73d0579d55b0.hot-update.js  page.ff886b771083cd24.hot-update.js
web/.next/types/: validator.ts
web/.next/types/app/: layout.ts  page.ts
web/.next/types/app/visualizer/: page.ts
web/public/data/: structures.json
web/public/data/structures/: 1.vasp  1046.vasp  1046_1.vasp  1046_2.vasp  1_1.vasp  1_2.vasp  741.vasp  741_1.vasp  741_2.vasp
web/public/wasm/: defect_gnn_viz.js  defect_gnn_viz.wasm
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/visualizer/: page.tsx
web/src/components/: AtomLegend.tsx  ControlsPanel.tsx  CrystalViewer.tsx  Footer.tsx  MobileControls.tsx  PipelineModal.tsx  StructureSelector.tsx
web/src/hooks/: useDefectGNN.ts
web/src/lib/: atoms.ts  structure-loader.ts
web/src/types/: defect-gnn.d.ts
